# ThousandWorlds

./: .gitignore  LICENSE  README.md  __init__.py  croissant.json  evaluate.py  pyproject.toml
dataset/: README.md  inputs.csv
dataset/norm_stats/multi-complete/: spectral.meta.json
dataset/norm_stats/multi-partial/: gcm_to_idx.json  spectral.meta.json  transforms.meta.json
dataset/norm_stats/single-complete/: gcm_to_idx.json  spectral.meta.json  transforms.meta.json
dataset/subsets/multi-complete/: held_out_aux.csv  test.csv  test_shared_planets_only.csv  train.csv
dataset/subsets/multi-partial/: held_out_aux.csv  test.csv  train.csv  (+1 more)
models/: README.md  _gplfr_core.py  coord_deeponet.py  gplfr.py  knn.py
notebooks/: pca_mlp.ipynb  quickstart.ipynb
results/: README.md  scores.csv  scores_5seeds.csv
tests/: conftest.py  test_coord_deeponet.py  test_coord_mlp.py  test_croissant_metadata.py  test_data.py  test_evaluate.py  test_make_model_tables.py  test_models.py  test_preprocessing.py  test_routing.py  test_schema.py  test_spectral.py  test_symmetry.py
thousandworlds/: __init__.py  _run_model_config.py  _run_model_utils.py  data.py  evaluate.py  field_spec.py  make_model_tables.py  preprocessing.py  rerun_public_models.py  run_model.py  schema.py  spectral.py
thousandworlds/assets/: inverse_sht.npy  latitude_weights.npy
thousandworlds/models/: README.md  __init__.py  _common.py  _coordinate.py  _gplfr_core.py  _gplfr_weighting.py  _metrics.py  _ppca.py  _torch_kernels.py  coord_mlp.py  gplfr.py  pca_mlp.py  pca_ridge.py  ppca_icm.py  train_mean.py
(+180 files in other folders)
